fixed removal of white spaces when printing group

--- a/solutions/set_expansion/ui/static/css/styles.css
+++ b/solutions/set_expansion/ui/static/css/styles.css
@@ -30,3 +30,7 @@
 .phrases_list {
     padding-top: 0px;
 }
+
+.group-div {
+    white-space: pre-wrap;
+}
